--- a/game-docker/portal-ext.properties
+++ b/game-docker/portal-ext.properties
@@ -13,3 +13,13 @@ users.reminder.queries.enabled=false
 # Disable LPKG validation
 
 module.framework.properties.lpkg.index.validator.enabled=false
+
+#
+# Specify the frequency for verifying the integrity of the database.
+#
+# Constants in VerifyProcess:
+#     public static final int ALWAYS = -1;
+#     public static final int NEVER = 0;
+#     public static final int ONCE = 1;
+#
+verify.frequency=0
